--- a/xingyiwap/package.json
+++ b/xingyiwap/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.8.1",
     "echarts": "^5.0.0",
+    "element-ui": "^2.14.1",
     "jquery": "^3.5.1",
     "juery": "^1.0.0",
     "less": "^3.12.2",
